# docs/v1/swagger.yaml
@@ -2699,15 +2699,6 @@ definitions:
     required:
     - workflow_id
     type: object
-  response.ActionInfo:
-    properties:
-      actionId:
-        type: string
-      actionName:
-        type: string
-      desc:
-        type: string
-    type: object
   response.AnalysisDocUrlResp:
     properties:
       urlList:
@@ -3253,6 +3244,8 @@ definitions:
     type: object
   response.CustomToolActionInfo:
     properties:
+      desc:
+        type: string
       method:
         type: string
       name:
@@ -4267,6 +4260,15 @@ definitions:
         description: 敏感词id
         type: string
     type: object
+  response.ToolAction4Workflow:
+    properties:
+      actionId:
+        type: string
+      actionName:
+        type: string
+      desc:
+        type: string
+    type: object
   response.ToolActionParam4Workflow:
     properties:
       description:
@@ -4301,11 +4303,11 @@ definitions:
           $ref: '#/definitions/response.ToolActionParam4Workflow'
         type: array
     type: object
-  response.ToolSelectWithActions:
+  response.ToolSelect4Workflow:
     properties:
       actions:
         items:
-          $ref: '#/definitions/response.ActionInfo'
+          $ref: '#/definitions/response.ToolAction4Workflow'
         type: array
       apiKey:
         type: string
@@ -4344,6 +4346,8 @@ definitions:
       needApiKeyInput:
         description: 是否需要apiKey输入
         type: boolean
+      schema:
+        type: string
       tags:
         description: 标签
         items:
@@ -9416,7 +9420,7 @@ paths:
                   - properties:
                       list:
                         items:
-                          $ref: '#/definitions/response.ToolSelectWithActions'
+                          $ref: '#/definitions/response.ToolSelect4Workflow'
                         type: array
                     type: object
               type: object
